crates/ignis_driver/tests/snapshots/e2e_ok__for_of_fixed_array_mut_ref.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 45
stdout: (empty)
stderr: (empty)
