crates/ignis_driver/tests/snapshots/e2e_ok__generic_calls_the_implementation_behind_a_trait_bound.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 46
stdout: (empty)
stderr: (empty)
