crates/ignis_driver/tests/snapshots/e2e_ok__if_let_chain_and.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 7
stdout: (empty)
stderr: (empty)
