crates/ignis_driver/tests/snapshots/e2e_ok__infer_bool_from_initializer.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 1
stdout: (empty)
stderr: (empty)
