crates/ignis_driver/tests/snapshots/e2e_ok__infer_from_function_argument.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 14
stdout: (empty)
stderr: (empty)
