crates/ignis_driver/tests/snapshots/e2e_ok__infer_multiple_variables.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 30
stdout: (empty)
stderr: (empty)
