crates/ignis_driver/tests/snapshots/e2e_ok__let_else_else_block_move_does_not_affect_the_fall_through_path.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 11
stdout: (empty)
stderr: (empty)
